// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrossPaymentChart renders an error when no accountId and authToken is passed 1`] = `
<justifi-gross-payment-chart>
  <template shadowrootmode="open">
    <main class="d-flex justify-content-center p-4 text-center" style="font-size: 1.2rem;">
      <p part="text color font-family">
        Account ID and Auth Token are required
      </p>
    </main>
  </template>
</justifi-gross-payment-chart>
`;

exports[`GrossPaymentChart renders an error when no accountId is passed 1`] = `
<justifi-gross-payment-chart auth-token="abc">
  <template shadowrootmode="open">
    <main class="d-flex justify-content-center p-4 text-center" style="font-size: 1.2rem;">
      <p part="text color font-family">
        Account ID and Auth Token are required
      </p>
    </main>
  </template>
</justifi-gross-payment-chart>
`;

exports[`GrossPaymentChart renders an error when no authToken is passed 1`] = `
<justifi-gross-payment-chart account-id="abc">
  <template shadowrootmode="open">
    <main class="d-flex justify-content-center p-4 text-center" style="font-size: 1.2rem;">
      <p part="text color font-family">
        Account ID and Auth Token are required
      </p>
    </main>
  </template>
</justifi-gross-payment-chart>
`;
